default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-ingress
  namespace: secure-lab

spec:

  # Select every pod in the namespace.
  podSelector: {}

  policyTypes:
    - Ingress
